src/components/Header/Header.module.css
.sidebar{
	position: sticky;
	top: 0;
	left: 0;
	right: 0;
	z-index: 2;
	width: 100%;
	background-color: #FFFFFF;
	border-bottom: 1px solid rgba(0,0,0,0.1);
	padding: 20px 15px;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: space-between;
}
.content{
	display: flex;
	width: 73%;
	margin: 0 auto;
	align-items: center;
	justify-content: space-between;
}
.content__row{
	display: flex;
	align-items: center;
}
.content__area{
	display: flex;
	align-items: center;
	justify-content: flex-start;
	gap: 0 40px;
}
.link_logo{
	text-decoration: none;
}
.logo{
	display: flex;
	align-items: center;
	font-size: 1rem;
	font-weight: 400;
}
.logo svg{
	margin-right: 10px;
}
.searchbar{
	margin-left: 35px;
}
.menu{
	display: flex;
	align-items: center;
	justify-content: space-between;
	gap: 0 20px;
}
.menu__row{
	display: flex;
	align-items: center;
}
.menu a{
	text-decoration: none;
}
.menu__item{
	cursor: pointer;
	list-style-type: none;
	display: flex;
	align-items: center;
	font-weight: 400;
	font-size: 0.9rem;
}
.menu__item_active{
	color: #1DC989;
}
.menu__item svg{
	filter: grayscale(1);
}
.menu__item_active svg{
	filter: none;
}
.menu__item:hover{
	transition: 0.2s ease-in-out color;
	color: #1DC989;
}
.menu__item:hover svg{
	transition: 0.2s ease-in-out color;
	fill: #1DC989;
	filter: none;
}
.menu__upperline{
	height: 1.2rem;
	width: 1px;
	background-color: #000;
	border-radius: 1px;
	margin-right: 20px;
	opacity: 0.1;
}
.menu__icon{
	opacity: 0.2;
	margin-right: 10px;
}
.menu__icon:hover{
	transition: 0.2s ease-in-out opacity;
	opacity: 0.8;
}

